build(deps):Compatible with PHP8.4  replace endroid/qr-code with wolfcode/bacon-qr-code
- Remove endroid/qr-code 4.8.2
- Add wolfcode/bacon-qr-code 2.0.10

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": ">=8.0",
-        "endroid/qr-code": "4.8.2"
+        "wolfcode/bacon-qr-code": "2.0.10"
     },
     "license": "BSD-2-Clause",
     "autoload": {
